--- a/webapp/scanner/templates/scanner.html
+++ b/webapp/scanner/templates/scanner.html
@@ -78,6 +78,10 @@
     <!-- ============== Welcome ============== -->
     <div class="screen" id="welcome"><div class="section">
       <h1>Welcome!</h1>
+    <!-- TODO: more info to user
+      <h1>Welcome {first_name}!</h1>
+      <p>Your Membership status is : {status_id}</p>
+    -->
     </div></div>
   </body>
 </html>
